feat: Added page Movies

--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -1,16 +1,21 @@
-.navTab__container {
+.navTab {
     text-align: center;
     background: #073042;
+    padding: 8px 0 40px;
 }
 
-.navTab {
+.navTab__link {
     border: 1px solid rgba(255, 255, 255, .6);
     border-radius: 3px;
     padding: 10px 20px;
-    margin: 0 0 30px;
     background: #073042;
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
     color: #fff;
+    text-decoration: none;
+    transition: opacity .3s;
+}
+.navTab__link:hover {
+    opacity: .5;
 }
