--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,7 +1,3 @@
-.aboutMe {
-
-}
-
 .aboutMe__image {
     width: 100%;
     border-radius: 10px;
@@ -45,7 +41,13 @@
     font-size: 14px;
     line-height: 1.3;
 }
+
 .aboutMe__link {
     text-decoration: none;
     color: #fff;
+    transition: opacity .3s;
+}
+
+.aboutMe__link:hover {
+    opacity: .5;
 }
