--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -8,6 +8,7 @@
     font-weight: 400;
     font-size: 11px;
     line-height: 18px;
+    cursor: pointer;
 }
 
 .filter__checkbox {
@@ -55,6 +56,8 @@
     box-sizing: border-box;
 }
 
-/*.filter__checkbox:focus + .filter__checkbox-visible {*/
-/*    box-shadow: 0 0 7px #2BE080;*/
-/*}*/
+@media screen and (min-width: 500px){
+    .filter__fieldset-checkbox{
+        text-align: left;
+    }
+}
