--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -22,3 +22,28 @@
     color: #8B8B8B;
     padding: 0 0 8px;
 }
+
+@media screen and (min-width: 500px) {
+    .footer {
+        font-size: 13px;
+        padding: 66px 30px 0;
+    }
+    .footer__copyright {
+        color: #fff;
+        padding: 0;
+        margin: 0;
+    }
+    .footer__social-container {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 0;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .footer {
+        padding: 66px 70px 0;
+    }
+}
