--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,115 @@
 .header {
-    height: 74px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 18px 14px;
+    background: #202020;
+}
+
+.header__logo {
+    width: 38px;
+    height: 38px;
+}
+
+.header__button-container {
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 1.6;
+}
+
+.header__menu-button {
+    width: 44px;
+    height: 44px;
+}
+
+.header__register {
+    margin: 0;
+    padding: 0 14px 0 0;
+    text-decoration: none;
+    color: #fff;
+    transition: opacity .3s;
+}
+
+.header__register:hover {
+    opacity: .5;
+}
+
+.header__button-login {
+    background: #3DDC84;
+    border-radius: 3px;
+    border: none;
+    padding: 5px 12px;
+    text-decoration: none;
+    transition: opacity .3s;
+}
+
+.header__button-login:hover {
+    opacity: .6;
+}
+
+.header_main {
+    background: #073042;
+}
+
+.header__container {
+    display: none;
+}
+
+.header__link-movies {
+    text-decoration: none;
+    color: #fff;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 1.3;
+    opacity: .6;
+}
+
+.header__link-movies_selected {
+    font-weight: 500;
+    opacity: 1;
+}
+
+.header__account {
+    display: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    padding: 8px 20px;
+    background: #313131;
+    border-radius: 20px;
+}
+
+@media screen and (min-width: 500px) {
+    .header {
+        padding: 18px 30px;
+    }
+
+    .header__button-container {
+        font-size: 12px;
+    }
+
+    .header__register {
+        padding: 0 30px 0 0;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .header {
+        padding: 18px 70px;
+    }
+
+    .header__container {
+        display: flex;
+        gap: 16px;
+    }
+
+    .header__account {
+        display: block;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .header__menu-button {
+        display: none;
+    }
 }
