--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,3 +1,14 @@
 .movies {
     padding: 0 10px;
 }
+
+@media screen and (min-width: 500px){
+    .movies {
+        padding: 0 30px;
+    }
+}
+@media screen and (min-width: 1024px){
+    .movies {
+        padding: 0 70px;
+    }
+}
