--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -5,6 +5,7 @@
 .moviesCard__image {
     width: 100%;
     height: 168px;
+    cursor: pointer;
 }
 
 .moviesCard__title-container {
@@ -25,12 +26,27 @@
 .moviesCard__like-image {
     width: 14px;
     height: 12px;
+    cursor: pointer;
+    transition: opacity .3s;
 }
-
+.moviesCard__like-image:hover {
+    opacity: .6;
+}
 .moviesCard__duration {
     font-weight: 400;
     font-size: 10px;
     line-height: 1.2;
     color: #8B8B8B;
     padding: 0 16px;
+}
+
+@media screen and (min-width: 500px){
+    .moviesCard__image {
+        height: 190px;
+    }
+}
+@media screen and (min-width: 1024px){
+    .moviesCard__image {
+        height: 203px;
+    }
 }
