--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,16 +1,18 @@
-.cardList__add-container {
-    text-align: center;
-    padding: 50px 40px 80px;
+.cardList {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 300px);
+    grid-column-gap: 30px;
+    justify-content: center;
+    align-items: center;
 }
-.cardList__add {
-    padding: 10px 20px;
-    text-align: center;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 15px;
-    color: #FFFFFF;
-    background: #202020;
-    border: 1px solid #424242;
-    border-radius: 6px;
-    width: 100%;
+
+@media screen and (min-width: 500px){
+    .cardList {
+        grid-template-columns: repeat(auto-fit, 339px);
+    }
+}
+@media screen and (min-width: 1024px){
+    .cardList {
+        grid-template-columns: repeat(auto-fit, 364px);
+    }
 }
