--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -4,7 +4,7 @@
     padding: 8px 0 40px;
 }
 
-.navTab__link {
+.navTab__button {
     border: 1px solid rgba(255, 255, 255, .6);
     border-radius: 3px;
     padding: 10px 20px;
@@ -13,9 +13,15 @@
     font-size: 12px;
     line-height: 1.3;
     color: #fff;
-    text-decoration: none;
     transition: opacity .3s;
+    cursor: pointer;
 }
-.navTab__link:hover {
+.navTab__button:hover {
     opacity: .5;
+}
+
+@media screen and (min-width: 1024px) {
+    .navTab {
+        text-align: left;
+    }
 }
