--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -35,7 +35,7 @@
 }
 
 .portfolio__link:hover {
-opacity: .5;
+    opacity: .5;
 }
 
 .portfolio__line {
@@ -44,4 +44,30 @@ opacity: .5;
     width: 100%;
     height: 1px;
     margin: 20px 0;
+}
+
+@media screen and (min-width: 500px) {
+    .portfolio {
+        padding: 0 50px 70px;
+    }
+
+    .portfolio__title {
+        font-size: 18px;
+    }
+
+    .portfolio__link {
+        font-size: 28px;
+        line-height: 50px;
+    }
+
+    .portfolio__arrow {
+        width: 27px;
+        height: 60px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .portfolio {
+        padding: 0 70px 70px;
+    }
 }
