--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,10 +1,19 @@
+.promo__container {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 75px);
+    background: #073042;
+}
+
 .promo {
     text-align: center;
+    flex: 1 1 auto;
     background: #073042;
 }
 
 .promo__image {
     padding: 70px 0 44px;
+    max-width: 210px;
 }
 
 .promo__title {
@@ -22,4 +31,43 @@
     line-height: 1.3;
     opacity: .5;
     padding: 0 10px 80px;
+}
+
+@media screen and (min-width: 500px) {
+    .promo__image {
+        padding: 140px 0 48px;
+        max-width: 310px;
+        min-height: 300px;
+    }
+
+    .promo__title {
+        font-size: 40px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .promo {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        text-align: left;
+        padding: 75px 70px 0;
+    }
+
+    .promo__image {
+        padding: 0;
+        align-self: flex-start;
+    }
+
+    .promo__title {
+        max-width: 640px;
+        padding: 0 0 36px;
+        font-size: 50px;
+    }
+
+    .promo__description {
+        max-width: 310px;
+        margin: 0;
+        padding: 0 0 146px;
+    }
 }
