--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -77,6 +77,8 @@
     padding: 8px 20px;
     background: #313131;
     border-radius: 20px;
+    text-decoration: none;
+    color: #fff;
 }
 
 @media screen and (min-width: 500px) {
