--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 18px 14px;
+    padding: 18px 0;
     background: #202020;
 }
 
@@ -49,6 +49,7 @@
 
 .header_main {
     background: #073042;
+    padding: 18px 14px;
 }
 
 .header__container {
@@ -83,7 +84,7 @@
 
 @media screen and (min-width: 500px) {
     .header {
-        padding: 18px 30px;
+        padding: 18px 0;
     }
 
     .header__button-container {
@@ -93,11 +94,14 @@
     .header__register {
         padding: 0 30px 0 0;
     }
+    .header_main {
+        padding: 18px 30px;
+    }
 }
 
 @media screen and (min-width: 1024px) {
     .header {
-        padding: 18px 70px;
+        padding: 18px 0;
     }
 
     .header__container {
@@ -108,9 +112,9 @@
     .header__account {
         display: block;
     }
-}
-
-@media screen and (min-width: 1024px) {
+    .header_main {
+        padding: 18px 70px;
+    }
     .header__menu-button {
         display: none;
     }
