--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -1,5 +1,8 @@
 .savedMovies {
     padding: 0 10px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 @media screen and (min-width: 500px){
