--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,6 +1,12 @@
 .searchForm__fieldset {
     margin: 0;
     padding: 90px 0 9px;
+    border: none;
+}
+
+.searchForm__container {
+    margin: 0;
+    padding: 0 0 9px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,8 +18,12 @@
     color: #8B8B8B;
     background: #202020;
     border: none;
-    outline-style: none;
     width: 80%;
+}
+
+.searchForm__error {
+    color: red;
+    font-size: 13px;
 }
 
 .searchForm__button {
@@ -30,4 +40,8 @@
 
 .searchForm__button:hover {
     opacity: .7;
+}
+
+.searchForm__button:disabled {
+    background-color: #8B8B8B;
 }
