feat: Changed forms

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -94,6 +94,7 @@
     .header__register {
         padding: 0 30px 0 0;
     }
+
     .header_main {
         padding: 18px 30px;
     }
@@ -109,12 +110,18 @@
         gap: 16px;
     }
 
+    .header__logo {
+        padding-right: 60px;
+    }
+
     .header__account {
         display: block;
     }
+
     .header_main {
         padding: 18px 70px;
     }
+
     .header__menu-button {
         display: none;
     }
