feat: PC version

--- a/src/components/RegisterForm/RegisterForm.css
+++ b/src/components/RegisterForm/RegisterForm.css
@@ -36,6 +36,21 @@
 .register-form__form-container {
 
 }
+.register-form__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.register-form__message-error{
+    justify-self: center;
+    align-self: center;
+    /*text-align: center;*/
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    color: #EE3465;
+    padding: 0 0 15px;
+}
 
 .register-form__fieldset {
     display: flex;
