--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 18px 0;
-    background: #202020;
+    padding: 18px 14px;
+    background: transparent;
 }
 
 .header__logo {
@@ -49,7 +49,9 @@
 
 .header_main {
     background: #073042;
-    padding: 18px 14px;
+}
+.header_hide {
+    display: none;
 }
 
 .header__container {
@@ -76,7 +78,7 @@
     font-size: 14px;
     line-height: 16px;
     padding: 8px 20px;
-    background: #313131;
+    background: transparent;
     border-radius: 20px;
     text-decoration: none;
     color: #fff;
@@ -84,7 +86,7 @@
 
 @media screen and (min-width: 500px) {
     .header {
-        padding: 18px 0;
+        padding: 18px 30px;
     }
 
     .header__button-container {
@@ -94,15 +96,11 @@
     .header__register {
         padding: 0 30px 0 0;
     }
-
-    .header_main {
-        padding: 18px 30px;
-    }
 }
 
 @media screen and (min-width: 1024px) {
     .header {
-        padding: 18px 0;
+        padding: 18px 70px;
     }
 
     .header__container {
@@ -116,10 +114,6 @@
 
     .header__account {
         display: block;
-    }
-
-    .header_main {
-        padding: 18px 70px;
     }
 
     .header__menu-button {
