--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -2,7 +2,7 @@
     padding: 0 10px;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: calc(100vh - 80px - 170px)
 }
 
 @media screen and (min-width: 500px){
