--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,5 @@
 .footer {
+    display: none;
     padding: 66px 10px 0;
     text-align: center;
     font-weight: 400;
@@ -6,8 +7,8 @@
     line-height: 15px;
 }
 
-.footer_hide {
-    display: none;
+.footer_show {
+    display: block;
 }
 
 .footer__description {
