--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    display: flex;
+    display: none;
     justify-content: space-between;
     align-items: center;
     padding: 18px 14px;
@@ -50,8 +50,8 @@
 .header_main {
     background: #073042;
 }
-.header_hide {
-    display: none;
+.header_show {
+    display: flex;
 }
 
 .header__container {
