--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -15,7 +15,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /*position: relative;*/
 }
 .notFound__title {
     margin: 0;
@@ -28,9 +27,11 @@
     margin: 0;
 }
 .notFound__back-link {
+    border: none;
+    background: transparent;
+    cursor: pointer;
     position: absolute;
     bottom: 0;
-
     text-decoration: none;
     color: #4285F4;
     padding: 0 0 30px;
@@ -38,10 +39,5 @@
 
 @media screen and (min-width: 500px){
     .notFound__container {
-        /*position: relative;*/
-    }
-    .notFound__back-link {
-        /*bottom: -184px;*/
-        /*padding: 0 0 30px;*/
     }
 }
