--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -10,7 +10,6 @@
     line-height: 1.2;
 }
 .notFound__container {
-    /*flex: 1 1 auto;*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,7 +33,7 @@
     bottom: 0;
     text-decoration: none;
     color: #4285F4;
-    padding: 0 0 30px;
+    margin: 0 0 30px;
 }
 
 @media screen and (min-width: 500px){
