fix: Working with cookes and chenge styles

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,9 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
+    max-width: 1700px;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
 .footer_show {
