--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -12,6 +12,6 @@
   height: 100%;
 }
 .page__container {
-  margin: 0 auto;
-  max-width: 1700px;
+  /*margin: 0 auto;*/
+  /*max-width: 1700px;*/
 }
