--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -1,4 +1,7 @@
 .savedMovies {
+    max-width: 1700px;
+    margin: 0 auto;
+    box-sizing: border-box;
     padding: 0 10px;
     display: flex;
     flex-direction: column;
