--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,3 @@
 @import url(../src/vendor/normalize.css);
 @import url(./vendor/fonts/fonts.css);
-@import url(../src/components/App/App.css);
+/*@import url(../src/components/App/App.css);*/
